[package]
name = "alexa_sdk"
version = "1.0.0"
authors = ["Arien Malec <arien.malec@gmail.com>"]
description = "Implements Request/Response for Amazon Alexa skills"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/arienmalec/alexa_rust"
repository = "https://github.com/arienmalec/alexa_rust"
keywords = ["alexa", "amazon"]
edition = "2021"

[features]
# a no-op feature which allows us to insert uncompiled code into doctest examples.
doctest = []

# Include data types and functions for the audioplayer interface.
audioplayer = [ "display" ]

# Include data types and functions for the display interface.
display = []

[dependencies]
serde = { version = "^1", features = [ "derive" ] }
serde_json = "^1"

[dev-dependencies]
lambda_runtime = "0.13.0"
tokio = { version = "1.44.1", features = []}